# doctoskill

./: .gitignore  README.md  main.py  pyproject.toml
doc_to_skill/: __init__.py  __main__.py  skill_generator.py
swagger_to_skill/: __init__.py  __main__.py  models.py  parser.py  reference_generator.py  schema_resolver.py  utils.py
